--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 telegram.bot.token = 5356704414:AAF4ww-GyUhp5iNjRxzarvQGxBCXVlOUFB0
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pet_shelter
+spring.datasource.username = command4
+spring.datasource.password = command4
+
+spring.jpa.hibernate.ddl-auto= update
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
