--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jpa.hibernate.ddl-auto= none
 
+rules.text.path = src/main/resources/rules.txt
+
