Добавлены методы на запросы по правилам знакомства с собкаой и переченю документов

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.liquibase.change-log = classpath:liquibase/changelog-master.yml
 
 spring.jpa.hibernate.ddl-auto = none
 
+text.files.path = src/main/resources/text/
+
